--- a/pages/siguenos.html
+++ b/pages/siguenos.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siguenos</title>
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
+    <header class="headergeneral">
+        <div>
             <img src="../img/image.jpg" alt="">
         </div>
         <div>
-            <h1 class="header">Siguenos</h1>
+            <h1>Siguenos</h1>
         </div>
         <nav>
             <ul>
@@ -27,27 +27,22 @@
         </nav>
     </header>
     <main>
-        <div>
-            <div class="margen2 contenedor2" >
-                <div class="c3">
+        <div class="siguenos" >          
+            <div class="formulario">
+                <div>
                     <h5>Siguenos en</h5>
                     <a target="_blank" href="https://www.instagram.com/_efrain_rr/"><img src="../img/insta.png" width="60" ></a>
-                </div>               
-                <div>
-                    <div>
-                        <h3>Dejanos tus comentarios</h3>
-                    </div>
-                    <form action="">
-                        <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre"><br>
-                        <input type="email" name="apellido" id="apellido" placeholder="Escribe tu correo"><br>
-                        <input type="text" name="mensaje" placeholder="Escribe tu mensaje"><br>
-                        <input type="submit" value="ENVIAR">
-                        <input type="reset" value="BORRAR">
-                    </form>
-                </div>    
-
-            </div>
-        </div>    
+                    <h3>Dejanos tus comentarios</h3>
+                </div>
+                <form action="">
+                    <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre"><br>
+                    <input type="email" name="apellido" id="apellido" placeholder="Escribe tu correo"><br>
+                    <input type="text" name="mensaje" placeholder="Escribe tu mensaje"><br>
+                    <input type="submit" value="ENVIAR">
+                    <input type="reset" value="BORRAR">
+                </form>
+            </div>    
+        </div>   
     </main>
     <footer class="footer">
         <div>
