--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Inicio</title>
     <link rel="shortcut icon" href="img/image.jpg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style2.css">
 </head>
 
@@ -17,7 +18,7 @@
         <div>
             <h1 class="header">Inicio</h1>
         </div>
-        <nav>
+        <!-- <nav>
             <ul >
                 <li ><a href="#">Inicio</a></li>
                 <li ><a href="pages/nosotros.html">Nosotros</a></li>
@@ -25,21 +26,38 @@
                 <li ><a href="pages/propuesta.html">Propuesta</a></li>
                 <li ><a href="pages/siguenos.html">Siguenos</a></li>
             </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                  <a class="nav-link" href="pages/nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="pages/viajes.html">Viajes</a>
+                  <a class="nav-link" href="pages/propuesta.html">Propuesta</a>
+                  <a class="nav-link" href="pages/siguenos.html">Siguenos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main class="GridMainHome">
         <div class="titulo1home">
             <H1>Bienvenidos a nuestro sitio</H1>
         </div>
         <div class="imgmainhome">
-            <img src="img/logo.jpeg" width="600px">
+            <img src="img/nosotros.JPEG" width="600px">
         </div>
         <div class="textocentralhome">
             <P>Esta pagina fue diseñada como presente para la chica que se robo mi corazon y con la cual en proximas fechas contrare matrimonio</P>
         </div>
         <div class="titulo2home">
             <h2>Nuestra cancion</h2>
-            <img src="img/logo.jpeg" alt="">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/e2PNG9mN5NE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </main>
     <footer>
@@ -50,5 +68,6 @@
             <p>Este es un blog Website diseñado a modo de presente</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
 </body>
 </html>
