--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
@@ -16,15 +17,32 @@
         <div>
             <h1 class="header">Nosotros</h1>
         </div>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="#">Nosotros</a></li>
-                <li><a href="viajes.html">Viajes</a></li>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="#">Viajes</a></li>
                 <li><a href="propuesta.html">Propuesta</a></li>
                 <li><a href="siguenos.html">Siguenos</a></li>
             </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="#">Nosotros</a>
+                  <a class="nav-link" href="viajes.html">Viajes</a>
+                  <a class="nav-link" href="propuesta.html">Propuesta</a>
+                  <a class="nav-link" href="siguenos.html">Siguenos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
         <div>
@@ -32,12 +50,12 @@
         </div>
         <div class="nosotrosmain">
             <div class="efra">
-                <img class="imgform" src="../img/logo.jpEg" width="400px" height="500px">
+                <img class="imgform" src="../img/Efra.jpg" width="400px" height="500px">
                 <h4>Efrain</h4>
                 <p class="contenedor">Informacion de Efra</p><br>
             </div>
             <div class="mis">
-                <img class="imgform" src="../img/logo.JPEG" width="450px">
+                <img class="imgform" src="../img/Mis.JPG" width="450px">
                 <h4>Misraim</h4>
                 <p class="contenedor">Informacion de Mis</p>
             </div>
@@ -51,5 +69,6 @@
             <p>Este es un blog Website diseñado a modo de presente</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
 </body>
 </html>
