--- a/pages/propuesta.html
+++ b/pages/propuesta.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>propuesta</title>
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
     <header class="headergeneral">
         <div >
-            <img src="../img/image.jpg" alt="">
+            <img src="../img/image.jpg" alt="" class="img-fluid">
         </div>
         <div>
             <h1>La Propuesta</h1>
         </div>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
@@ -24,23 +25,40 @@
                 <li><a href="#">Propuesta</a></li>
                 <li><a href="siguenos.html">Siguenos</a></li>
             </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="viajes.html">Viajes</a>
+                  <a class="nav-link" href="#">Propuesta</a>
+                  <a class="nav-link" href="siguenos.html">Siguenos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main class="MainPropuesta">
-        <div class="titulognral">
+        <div class="titulognral container">
             <div>
-                <p>Como olvidar esat fehca: 17 de diciembre del 2022. el dia en que le propuse matrimonio a la mujer que se robo mi corazon </p>
+                <p class="formulario">Como olvidar esat fehca: 17 de diciembre del 2022. el dia en que le propuse matrimonio a la mujer que se robo mi corazon </p>
             </div>
             <div>
-                <img class="p4" src="../img/logo.jpeg" width="900px">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae odio sint laborum, natus architecto fuga veniam eaque ipsum distinctio neque ipsa error modi officia corrupti veritatis? Minima, quas? Quasi, officia!</p>
+                <img class="p4 img-fluid" src="../img/p1.jpeg" width="900px">
+                <p class="formulario">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae odio sint laborum, natus architecto fuga veniam eaque ipsum distinctio neque ipsa error modi officia corrupti veritatis? Minima, quas? Quasi, officia!</p>
             </div>
         </div>
-        <div class="FotosPropuesta">
-            <div>
-                <img class="p1" src="../img/logo.jpeg" width="400">
-                <img class="p2" src="../img/logo.jpeg" width="710">
-                <img class="p3" src="../img/logo.jpeg" width="400">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-12"><img class="p1 img-fluid" src="../img/p3.jpeg"></div>
+                <div class="col-lg-6 col-12"><img class="p2 img-fluid" src="../img/p2.jpeg"></div>
+                <div class="col-lg-3 col-12"><img class="p3 img-fluid" src="../img/p4.jpeg"></div>
             </div>
         </div>
     </main>
@@ -52,5 +70,6 @@
             <p class="pfooter">Este es un blog Website diseñado a modo de presente</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
 </body>
 </html>
