--- a/pages/siguenos.html
+++ b/pages/siguenos.html
@@ -6,17 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siguenos</title>
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
-    <header class="headergeneral">
+    <header class="headergeneral container-fluid">
         <div>
             <img src="../img/image.jpg" alt="">
         </div>
         <div>
             <h1>Siguenos</h1>
         </div>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
@@ -24,27 +25,50 @@
                 <li><a href="propuesta.html">Propuesta</a></li>
                 <li><a href="#">Siguenos</a></li>
             </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="viajes.html">Viajes</a>
+                  <a class="nav-link" href="propuesta.html">Propuesta</a>
+                  <a class="nav-link" href="#">Siguenos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
     <main>
-        <div class="siguenos" >          
-            <div class="formulario">
-                <div>
-                    <h5>Siguenos en</h5>
-                    <a target="_blank" href="https://www.instagram.com/_efrain_rr/"><img src="../img/insta.png" width="60" ></a>
-                    <h3>Dejanos tus comentarios</h3>
+        <div class="container" >          
+            <div class="formulario container text-center">
+                <div class="row">
+                    <div class="col-lg-12 col-12">
+                        <h5>Siguenos en</h5>
+                        <a target="_blank" href="https://www.instagram.com/_efrain_rr/"><img src="../img/insta.png" width="60" ></a>
+                        <h3>Dejanos tus comentarios</h3>
+                    </div>
                 </div>
-                <form action="">
-                    <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre"><br>
-                    <input type="email" name="apellido" id="apellido" placeholder="Escribe tu correo"><br>
-                    <input type="text" name="mensaje" placeholder="Escribe tu mensaje"><br>
-                    <input type="submit" value="ENVIAR">
-                    <input type="reset" value="BORRAR">
-                </form>
+                <div class="row">
+                    <div class="col-sm-12 col-12">
+                        <form action="">
+                            <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre"><br>
+                            <input type="email" name="apellido" id="apellido" placeholder="Escribe tu correo"><br>
+                            <input type="text" name="mensaje" placeholder="Escribe tu mensaje"><br>
+                            <input type="submit" value="ENVIAR">
+                            <input type="reset" value="BORRAR">
+                        </form>
+                    </div>
+                </div>
             </div>    
         </div>   
     </main>
-    <footer class="footer">
+    <footer class="footer container-fluid">
         <div>
             <h3 class="hfooter">
                 E Y M
@@ -52,5 +76,6 @@
             <p class="pfooter">Este es un blog Website diseñado a modo de presente</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
 </body>
 </html>
