--- a/pages/viajes.html
+++ b/pages/viajes.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Viajes</title>
     <link rel="shortcut icon" href="img/logo.jpeg" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style2.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
         <div>
             <h1>Viajes</h1>
         </div>
-        <nav>
+        <!-- <nav>
             <ul>
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="nosotros.html">Nosotros</a></li>
@@ -24,47 +25,84 @@
                 <li><a href="propuesta.html">Propuesta</a></li>
                 <li><a href="siguenos.html">Siguenos</a></li>
             </ul>
-        </nav>
+        </nav> -->
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Menu</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="#">Viajes</a>
+                  <a class="nav-link" href="propuesta.html">Propuesta</a>
+                  <a class="nav-link" href="siguenos.html">Siguenos</a>
+                </div>
+              </div>
+            </div>
+          </nav>
     </header>
-    <main class="MainViajes">
-        <div class="parrafoviajes">
+    <main class="container">
+        <div class="formulario">
             <p>He aqui una brebe descipcion de los viajes mas remembrables que hemos tenido en lo que llevamos de relacion</p>
         </div>
-        <div class="GridMainViajes">
-            <div class="v1 imgviajes">
-                <img class="imgform" src="../img/logo.jpeg" height="400px">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <img class="p1 img-fluid" src="../img/49AD0523-5D89-492C-9572-0C7A16406A63.jpg" height="400px">
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="formulario">
+                        <h1>Viaje al pueblito magico "Calvillo"</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+                    </div>
+                </div>
+            </div> 
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <div class="formulario">
+                        <h1>viaje al pueblito magico "Mazamitla"</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <img class="p1 img-fluid" src="../img/mazamitla.JPEG" alt="">
+                </div>
+            </div>      
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <img class="p1 img-fluid" src="../img/gto.jpeg" alt="">
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="formulario">
+                        <h1>Viaje a Guanajuato</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+                    </div>
+                </div>
+            </div>   
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <div class="formulario">
+                        <h1>Viaje al Zoologico de Guadalajara</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-12">
+                    <img class="p1 img-fluid" src="../img/zoo.jpg" alt="">
+                </div>
             </div>
-            <div class="v2 contenedor">
-                <h1>Viaje 1</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat iure praesentium ut repellendus reiciendis voluptas, nulla sed facilis voluptate error aliquid magni? Error provident explicabo esse, suscipit quaerat et officiis?</p>
-            </div>
-            <div class="v3 contenedor">
-                <h1>viaje 2</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero veritatis doloribus provident! Nam iure tempora nisi ratione, alias quaerat itaque voluptatem similique, minus, reprehenderit excepturi eveniet aut voluptate asperiores veritatis?</p>
-            </div>
-            <div class="v4 imgviajes">
-                <img class="imgform" src="../img/logo.jpeg" alt="">
-            </div>
-            <div class="v5 imgviajes">
-                <img class="imgform" src="../img/logo.jpeg" alt="">
-            </div>
-            <div class="v6 contenedor">
-                <h1>viaje 3</h1>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est quas dolor dolorem voluptatem tempora ab, expedita asperiores sed ratione adipisci ea a hic voluptas architecto praesentium nisi dolorum nulla? Veniam.</p>
-            </div>
-            <div class="v7 contenedor">
-                <h1>viaje 4</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde deserunt sed saepe, ipsum ipsa rem fugit natus voluptatem numquam rerum consequuntur quod ab ut porro velit, doloremque voluptatibus odio dolor?</p>
-            </div>
-            <div class="v8 imgviajes">
-                <img class="imgform" src="../img/logo.jpeg" alt="">
-            </div>
-            <div class="v9 imgviajes">
-                <img class="imgform" src="../img/logo.jpeg" alt="">
-            </div>
-            <div class="v10 contenedor">
-                <h1>viaje 5</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+            <div class="row">
+                <div class="col-lg-6 col-12">
+                    <img class="p1 img-fluid" src="../img/vallarta.JPEG" alt="">
+                </div>
+                <div class="col-lg-6 col-12">
+                    <div class="formulario">
+                        <h1>Viaje a Puerto Vallarta</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, reiciendis sint! Quaerat saepe quos rerum est sint laudantium tenetur iusto at possimus adipisci aspernatur aliquam, minus dolores. Eligendi, eum esse.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
@@ -76,5 +114,6 @@
             <p>Este es un blog Website diseñado a modo de presente</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>    
 </body>
 </html>
